Fixed circle/rotation line alignment

--- a/styles.css
+++ b/styles.css
@@ -9,14 +9,17 @@ body {
     overflow: hidden;
 }
 
-#trail-canvas, #rotation-canvas {
-    position: absolute;
-}
-
-#canvas {
-    background-color:rgb(100, 100, 100);
+canvas {
     border: solid white 5px;
     border-radius: 20px;
+}
+
+#circle-canvas {
+    background-color:rgb(100, 100, 100);
+}
+
+#trail-canvas, #rotation-canvas {
+    position: absolute;    
 }
 
 #controls {
